--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <!-- <script src="./index.js"></script>
     <script src="./variables.js"></script> -->
-    <script src="./functions.js"></script>
+    <script src="./callback.js"></script>
 </body>
 </html>
